--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "gql:ops": "graphql-codegen --config ./dev/codegen.ops.yml",
+    "gql:schema": "graphql-codegen --config ./dev/codegen.schema.yml"
   },
   "dependencies": {
     "@apollo/client": "^3.7.17",
@@ -21,6 +23,14 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^4.0.1",
+    "@graphql-codegen/client-preset": "^4.0.1",
+    "@graphql-codegen/introspection": "^2.2.3",
+    "@graphql-codegen/named-operations-object": "^2.3.1",
+    "@graphql-codegen/schema-ast": "^2.6.0",
+    "@graphql-codegen/typescript": "^2.8.5",
+    "@graphql-codegen/typescript-operations": "^2.5.10",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
