--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@mui/material": "^5.14.1",
     "graphql": "^16.7.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^4.0.1",
