--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "graphql": "^16.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^4.0.1",
